--- a/package.json
+++ b/package.json
@@ -8,17 +8,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "@element-plus/icons": "^0.0.11",
+    "axios": "^1.4.0",
+    "element-plus": "^2.3.5",
+    "sass": "^1.62.1",
+    "vue": "^3.2.36",
+    "vue-router": "^4.2.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "cz-customizable": "^6.3.0",
+    "unplugin-auto-import": "^0.16.4",
+    "unplugin-vue-components": "^0.25.0",
     "vite": "^4.3.5"
   },
   "config": {
-  "commitizen": {
-    "path": "node_modules/cz-customizable"
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    }
   }
-}
 }
